<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="demo.kyowang.com.wifilocationtest.InfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/frame" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="left|top">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/wifi_ip_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/ip_address"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/wifi_mac_address" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/mac_address"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/wifi_netword_id" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/network_id"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/wifi_netword_speed" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/network_speed"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/wifi_signal_strength" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Medium Text"
                    android:id="@+id/signal_strength"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp" />
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:text="@string/conn_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/conn_info"
                    android:layout_weight="1"
                    android:layout_marginLeft="20dp" />
            </TableRow>
            <TableRow></TableRow>
        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/other"
            android:layout_weight="1" />
    </LinearLayout>

</ScrollView>
